--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -261,6 +261,7 @@ set(HEADER_FILES
     ${IVW_INCLUDE_DIR}/inviwo/core/properties/isotfproperty.h
     ${IVW_INCLUDE_DIR}/inviwo/core/properties/isovalueproperty.h
     ${IVW_INCLUDE_DIR}/inviwo/core/properties/listproperty.h
+    ${IVW_INCLUDE_DIR}/inviwo/core/properties/marginproperty.h
     ${IVW_INCLUDE_DIR}/inviwo/core/properties/minmaxproperty.h
     ${IVW_INCLUDE_DIR}/inviwo/core/properties/multifileproperty.h
     ${IVW_INCLUDE_DIR}/inviwo/core/properties/optionproperty.h
@@ -639,6 +640,7 @@ set(SOURCE_FILES
     properties/isotfproperty.cpp
     properties/isovalueproperty.cpp
     properties/listproperty.cpp
+    properties/marginproperty.cpp
     properties/multifileproperty.cpp
     properties/optionproperty.cpp
     properties/optionpropertytraits.cpp
