--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -403,6 +403,7 @@ set(HEADER_FILES
     ${IVW_INCLUDE_DIR}/inviwo/core/util/threadutil.h
     ${IVW_INCLUDE_DIR}/inviwo/core/util/timer.h
     ${IVW_INCLUDE_DIR}/inviwo/core/util/transformiterator.h
+    ${IVW_INCLUDE_DIR}/inviwo/core/util/transparentmaps.h
     ${IVW_INCLUDE_DIR}/inviwo/core/util/typetraits.h
     ${IVW_INCLUDE_DIR}/inviwo/core/util/unindent.h
     ${IVW_INCLUDE_DIR}/inviwo/core/util/utilities.h
@@ -759,6 +760,7 @@ set(SOURCE_FILES
     util/threadpool.cpp
     util/threadutil.cpp
     util/timer.cpp
+    util/transparentmaps.cpp
     util/typetraits.cpp
     util/unindent.cpp
     util/utilities.cpp
