GHA: preset fixes

--- a/.github/workflows/inviwo.yml
+++ b/.github/workflows/inviwo.yml
@@ -138,7 +138,6 @@ jobs:
       run: >
         cmake -S inviwo -B build --preset gha-${{ matrix.linkage }}
         -DCMAKE_BUILD_TYPE=${{ matrix.configuration }}
-        -DVCPKG_INSTALL_OPTIONS='--clean-after-build'
         
     - name: "Build"
       timeout-minutes: 360
@@ -180,6 +179,13 @@ jobs:
         name: inviwo-python-api
         path: build/docs/python-api/*
     
+    - name: "Upload Vcpkg build Logs"
+      if: "${{ failure() }}"
+      uses: actions/upload-artifact@v4
+      with:
+        name: vcpkg-logs-${{ matrix.system }}-${{ matrix.linkage }}-${{ matrix.configuration }}
+        path: vcpkg/buildtrees/**/*.log
+
     - name: "Setup tmate session"
       if: "${{ failure() && contains(github.event.pull_request.labels.*.name, 'CI: Debug') }}"
       uses: mxschmitt/action-tmate@v3
@@ -378,7 +384,6 @@ jobs:
       run: >
         cmake -S inviwo -B build --preset gha-dynamic
         -DCMAKE_CXX_FLAGS='-stdlib=libc++'
-        -DVCPKG_INSTALL_OPTIONS='--clean-after-build'
         -DCMAKE_BUILD_TYPE=Release
         -DCMAKE_EXPORT_COMPILE_COMMANDS=ON
         -DIVW_MODULE_WEBBROWSER=ON
@@ -454,10 +459,11 @@ jobs:
       shell: pwsh
       run: |
         $ver = (Get-ChildItem -Name C:/"Program Files"/Inviwo/*)
-        Invoke-expression "C:/'Program Files'/Inviwo/$ver/bin/inviwo-cli.exe --logconsole --quit"
-        if($LASTEXITCODE -ne 0) {
-          Invoke-expression "C:\'Program Files (x86)'\'Windows Kits'\10\Debuggers\x64\gflags.exe /i C:/'Program Files'/Inviwo/$ver/bin/inviwo-cli.exe +sls"
-          Invoke-Expression "C:\'Program Files (x86)'\'Windows Kits'\10\Debuggers\x64\cdb.exe -g -c q C:/'Program Files'/Inviwo/$ver/bin/inviwo-cli.exe"
+        cd C:/'Program Files'/Inviwo/$ver/bin/
+        ./inviwo-cli.exe --logconsole --quit
+        if ($LASTEXITCODE -ne 0) {
+          C:\'Program Files (x86)'\'Windows Kits'\10\Debuggers\x64\gflags.exe /i inviwo-cli.exe +sls
+          C:\'Program Files (x86)'\'Windows Kits'\10\Debuggers\x64\cdb.exe -g -c q inviwo-cli.exe
         }
     
     # Macos
