--- a/.github/actions/install-dependencies/action.yml
+++ b/.github/actions/install-dependencies/action.yml
@@ -83,7 +83,7 @@ runs:
     - name: "Install Qt"
       uses: jurplel/install-qt-action@v4
       with:
-        version: '>=6.8.0'
+        version: '6.8.*'
         dir: ${{ github.workspace }}
         setup-python: false
 
